# apps/devices-registry/openapi.yaml
@@ -381,6 +381,10 @@ components:
             type: string
           title: tags
           type: array
+      required:
+      - kind
+      - model
+      - serialnum
       title: Device
     DeviceInfo:
       allOf:
@@ -390,6 +394,9 @@ components:
             type: string
           protocol:
             type: string
+        required:
+        - protocol
+        - provider
         type: object
         example: null
       example:
